src/app/main/component/auth/components/auth-modal/auth-modal.component.scss
@import 'src/typography/_resp.scss';

.main {
  display: flex;
  justify-content: center;
  align-items: center;
}

.wrapper {
  display: flex;
  justify-content: space-between;
  gap: 40px;
  width: 100%;
  max-width: 960px;
  background-color: white;
  border-radius: 4px;
  overflow: auto;

  .left-side {
    width: 480px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;

    .main-picture {
      border-radius: 4px;
      height: 100%;
      width: 100%;
      object-fit: cover;
    }
  }

  .right-side {
    width: 480px;
    max-height: 100vh;
    display: flex;
    flex-direction: column;
    padding: 20px;
    box-sizing: border-box;

    .close-modal-window {
      display: flex;
      justify-content: flex-end;
      margin: 26px 0 22px 98%;
      width: min-content;
      padding: 5px;
    }

    .cross-btn {
      width: 12px;
      height: 12px;
    }

    div {
      align-self: center;
      width: 370px;
      height: 100%;
    }
  }
}

@include responsivePCFirst(lg) {
  .wrapper {
    width: 480px;
    padding-right: 0;

    .left-side {
      display: none;
    }
  }
}

@include responsivePCFirst(lg) {
  .wrapper {
    .right-side {
      div {
        max-width: 320px;
      }
    }
  }
}

@media screen and (max-width: 350px) {
  .wrapper {
    .right-side {
      div {
        max-width: 280px;
      }
    }
  }
}

